# spv-patcher

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/patch-binding-location-matching/: Cargo.toml
crates/patch-binding-location-matching/src/: lib.rs
crates/patch-decorate-nonuniform/: Cargo.toml
crates/patch-decorate-nonuniform/src/: lib.rs
crates/patch-function/: Cargo.toml
crates/patch-function/src/: assignment_rewrite.rs  constant_replace.rs  dynamic_replace.rs  enumerate.rs  function_finder.rs  lib.rs  link_replace.rs  static_replace.rs
crates/patch-link/: Cargo.toml
crates/patch-link/src/: lib.rs
crates/patch-strip-debug/: Cargo.toml
crates/patch-strip-debug/src/: lib.rs
crates/patch-strip-debug/tests/: big_debug_shader.spirv  test_strip_complex.rs
crates/spv-benchmark/: Cargo.toml
crates/spv-benchmark/benches/: mandelbrot_append.rs  patching_benchmark.rs
crates/spv-benchmark/resources/: compile_shader.sh  compute_add.comp  mandelbrot.comp  shared.glsl
crates/spv-benchmark/resources/bench_const_replace/: Cargo.toml
crates/spv-benchmark/resources/bench_const_replace/src/: lib.rs
crates/spv-benchmark/resources/bench_const_replace_mandelbrot/: Cargo.toml
crates/spv-benchmark/resources/bench_const_replace_mandelbrot/src/: lib.rs
crates/spv-benchmark/resources/benchmark_shader_builder/: Cargo.toml  build.rs
crates/spv-benchmark/src/: bench.rs  bench_task.rs  buffer_to_image.rs  main.rs  reporter.rs
crates/spv-benchmark/src/bench/: const_replace.rs  dyn_replace.rs  static_replace.rs
crates/spv-patcher/: Cargo.toml
crates/spv-patcher/src/: dis_assamble.rs  lib.rs  patch.rs  print.rs  spirv_ext.rs  type_tree.rs  validator.rs
crates/spv-patcher/src/patch/: memory_model.rs  mutate_constant.rs
crates/spv-tester/: Cargo.toml
crates/spv-tester/resources/: compile_shader.sh  compute_add.comp  forward_declare.comp  nonuniform_patch.comp
crates/spv-tester/resources/no_inline_function/: Cargo.toml
crates/spv-tester/resources/no_inline_function/src/: lib.rs
crates/spv-tester/resources/rust_shader_builder/: Cargo.toml  build.rs
crates/spv-tester/resources/rust_shader_builder/src/: main.rs
crates/spv-tester/src/: compute_task.rs  const_mutate.rs  constant_replace.rs  dynamic_replace.rs  function_finder.rs  main.rs  non_uniform.rs  print.rs  static_mutate.rs  static_replace.rs  test_runs.rs  tests.rs
crates/vulkan-patchable-pipeline/: Cargo.toml
crates/vulkan-patchable-pipeline/src/: lib.rs
docs/: projectdoc.typ  works.bib
