[package]
name = "patch-function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spv-patcher = {path = "../spv-patcher"}
log.workspace = true
ahash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
