[package]
name = "patch-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spv-patcher = {path = "../spv-patcher"}
patch-function = {path = "../patch-function" }
log.workspace = true
ahash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
spirv-linker.workspace = true
