[package]
name = "spv-patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspirv.workspace = true
spirt.workspace = true
thiserror.workspace = true
log.workspace = true
bytemuck = {workspace = true, features = ["extern_crate_alloc"]}
smallvec.workspace = true
ahash.workspace = true
