[package]
name = "spv-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spv-patcher = {path = "../spv-patcher"}
vulkan-patchable-pipeline = {path = "../vulkan-patchable-pipeline"}
log.workspace = true
simple_logger.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
bytemuck.workspace = true
marpii.workspace = true
marpii-rmg.workspace = true
marpii-rmg-shared.workspace = true
marpii-rmg-tasks.workspace = true
thiserror.workspace = true
