[package]
name = "vulkan-patchable-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spv-patcher = {path = "../spv-patcher"}
log.workspace = true
marpii.workspace = true
marpii-rmg.workspace = true
bytemuck.workspace = true
